--- a/.mulle/etc/sourcetree/config
+++ b/.mulle/etc/sourcetree/config
@@ -20,24 +20,4 @@ src/mulle-time;${MULLE__TIME_NODETYPE:-clib};no-all-load,no-build,no-header,no-i
 src/mulle-dlfcn;${MULLE__DLFCN_NODETYPE:-clib};no-all-load,no-build,no-header,no-import,no-link,no-readwrite,no-share,no-share-shirk,no-clobber;3704D347-4599-4879-BA03-0CF99F56E476;${MULLE__DLFCN_URL:-clib:mulle-core/mulle-dlfcn@${MULLE_BRANCH}};${MULLE__DLFCN_BRANCH:-*};${MULLE__DLFCN_TAG};clibmode=copy;
 src/mulle-sprintf;${MULLE__SPRINTF_NODETYPE:-clib};no-all-load,no-build,no-header,no-import,no-link,no-readwrite,no-share,no-share-shirk,no-clobber;9AD31D7C-4638-4A4D-8A44-44E9C4E28CAC;${MULLE__SPRINTF_URL:-clib:mulle-core/mulle-sprintf@${MULLE_BRANCH}};${MULLE__SPRINTF_BRANCH:-*};${MULLE__SPRINTF_TAG};clibmode=copy;
 src/mulle-fprintf;${MULLE__FPRINTF_NODETYPE:-clib};no-all-load,no-build,no-header,no-import,no-link,no-readwrite,no-share,no-share-shirk,no-clobber;B80B64D7-507E-40C2-8A8A-627A3A143F4A;${MULLE__FPRINTF_URL:-clib:mulle-core/mulle-fprintf@${MULLE_BRANCH}};${MULLE__FPRINTF_BRANCH:-*};${MULLE__FPRINTF_TAG};clibmode=copy;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+mintomic;${MINTOMIC_NODETYPE:-clib};no-all-load,no-build,no-clobber,no-header,no-import,no-link,no-readwrite,no-share,no-share-shirk,no-clobber;C216CBD4-6DF2-4A37-891B-966E2A2178C1;${MINTOMIC_URL:-clib:mulle-concurrent/mintomic/@${MULLE_BRANCH}};${MINTOMIC_BRANCH:-*};${MINTOMIC_TAG};clibmode=copy;
