fix README.md again

--- a/cola/properties.plist
+++ b/cola/properties.plist
@@ -1,7 +1,7 @@
 {
    project =
    {
-      description="🌋 Almagamated library of mulle-core and mulle-c";
+      description="🌋 Almagamated library of mulle-core + mulle-concurrent + mulle-c";
       domain="github";
       name="mulle-core";
       user="mulle-core";
