--- a/.github/workflows/mulle-linux-package.yml
+++ b/.github/workflows/mulle-linux-package.yml
@@ -32,14 +32,8 @@ jobs:
 
     - uses: mulle-sde/github-ci@v2
 
-    - name: Install sudo
-      if:   ${{ env.ACT }}
-      run:  |
-            apt-get update
-            apt-get install -y sudo
-
-    - name: Install rpmbuild
-      run:  sudo apt-get update && sudo apt-get install -y rpm
+    - name: Install sudo and rpmbuild
+      run:  sudo apt-get update && sudo apt-get install -y rpm sudo
 
     - name: Install mulle-project
       run:  |
