--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -7,9 +7,9 @@ on:
     - master
     paths:
     - .github/workflows/semgrep.yml
-  schedule:
+# schedule:
   # random HH:MM to avoid a load spike on GitHub Actions at 00:00
-  - cron: 30 8 * * *
+#  - cron: 30 8 * * *
 name: Semgrep
 jobs:
   semgrep:
