--- a/cola/config.plist
+++ b/cola/config.plist
@@ -1,6 +1,8 @@
 {
    config = {
+       skipOverview = YES;
        skipOverviewGraphic = YES;
+       skipYouAreHere = YES;
        skipClibAdd = YES;
    }
 }
