stupid warnig fix

--- a/.github/workflows/cmake-errors.yml
+++ b/.github/workflows/cmake-errors.yml
@@ -62,7 +62,7 @@ jobs:
 
           - name: macOS GCC
             os: macos-latest
-            compiler: gcc-12
+            compiler: gcc
             cflags: -Werror -Wall -Wextra
 
     steps:
