--- a/.github/workflows/submodule-test.yml
+++ b/.github/workflows/submodule-test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        cmake-version: ['3.15', '3.31', '4.0', 'latest']
+        cmake-version: ['3.19', '4.0', 'latest']
     
     runs-on: ${{ matrix.os }}
     
